# personal_assitant

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
personal_notion_agent/: notion_manager.py
personal_notion_agent/app/: agent_factory.py  notion_manager.py
personal_notion_agent/app/prompts/: __init__.py  coordinator_instructions.py  formatter_instructions.py  notion_manager_instructions.py  responder_instructions.py  telegram_instructions.py
personal_notion_agent/infrastructure/: cors.py  settings.py
personal_notion_agent/models/: personal_task_model.py  personal_task_models.py  work_project_model.py  work_task_model.py
personal_notion_agent/routes/: bullet_journal.py  manager.py
skills/tools/: __init__.py  notion_mcp_tool.py  notion_tools.py  personal_tasks_tools.py  telegram_tools.py
skills/utils/: datetime_utils.py  group_identify.py
